--- a/background-img/estilos.css
+++ b/background-img/estilos.css
@@ -25,3 +25,14 @@
   margin-top: -100px;
   margin-bottom: 100px;
 }
+
+.number-card {
+  font-family: Nuckle;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  color: #29415b;
+}
